--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,11 @@
   "require": {
     "php": ">=7.2.10",
     "php-di/php-di": "6.0.5",
-    "guzzlehttp/guzzle": "~6.0"
+    "guzzlehttp/guzzle": "~6.0",
+    "doctrine/orm" : "^2.6",
+    "symfony/config": "^4.1",
+    "slim/slim": "^3.0",
+    "symfony/yaml": "^4.1"
   },
   "autoload": {
     "psr-4": {
