--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "doctrine/orm" : "^2.6",
     "symfony/config": "^4.1",
     "slim/slim": "^3.0",
-    "symfony/yaml": "^4.1"
+    "symfony/yaml": "^4.1",
+    "php-di/slim-bridge": "2.0.0"
   },
   "autoload": {
     "psr-4": {
