--- a/config/orm/Order.yml
+++ b/config/orm/Order.yml
@@ -1,12 +1,12 @@
 Sample\Domain\Entity\Order:
   type: entity
   repositoryClass: Sample\Domain\Repository\OrderRepository
-  table: Order
+  table: Order_
   id:
     id:
-      type: integer
+      type: string
       generator:
-        strategy: AUTO
+        strategy: none
   fields:
     userId:
       type: integer
