--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "symfony/config": "^4.1",
     "slim/slim": "^3.0",
     "symfony/yaml": "^4.1",
-    "php-di/slim-bridge": "2.0.0"
+    "php-di/slim-bridge": "2.0.0",
+    "php-amqplib/php-amqplib": "^2.8"
   },
   "autoload": {
     "psr-4": {
