Create RabbitMQ consumer to receive commands

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM php:7.3-apache-stretch
 
 RUN apt-get update \
     && apt-get install -y libpq-dev \
-    && docker-php-ext-install pdo pdo_pgsql bcmath
+    && docker-php-ext-install pdo pdo_pgsql bcmath sockets
 
 # Configure apache mod rewrite
 RUN ln -s /etc/apache2/mods-available/rewrite.load /etc/apache2/mods-enabled/rewrite.load
