Refactor update order command

--- a/config/orm/Order.yml
+++ b/config/orm/Order.yml
@@ -12,6 +12,10 @@ Sample\Domain\Entity\Order:
       type: float
       column: amount
       nullable: false
+    status:
+      type: string
+      column: status
+      nullable: false
     createdAt:
       type: datetime
       column: created_at
